--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Inner Meditation
-email: your-email@domain.com
+email: innermeditation.life@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Cultivate life energy with awareness of internal states of body and mind.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: none
+github_username:  none
 
 # Build settings
 markdown: kramdown
