--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Inner Meditation
-email: innermeditation.life@gmail.com
+email: info@innermeditation.life
 description: > # this means to ignore newlines until "baseurl:"
   Cultivate life energy with awareness of internal states of body and mind.
 baseurl: "" # the subpath of your site, e.g. /blog
