Add a sentence below title

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Inner Meditation
 email: info@innermeditation.life
 description: > # this means to ignore newlines until "baseurl:"
-  Cultivate life energy with awareness of internal states of body and mind.
+  Improve health, maintain wellness, and fulfill spirituality.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
