--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Inner Meditation
 email: info@innermeditation.life
 description: > # this means to ignore newlines until "baseurl:"
-  Improve health, maintain wellness, and fulfill spirituality.
+  A journey from basics of inner meditation to enlightenment.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
