--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,12 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+#
+#A journey of meditation: from basics to enlightenment.
+#
 title: Inner Meditation
 email: info@innermeditation.life
-description: > # this means to ignore newlines until "baseurl:"
-  A journey of meditation: from basics to enlightenment.
+#description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: none
