--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 #A journey of meditation: from basics to enlightenment.
 #
 title: Inner Meditation
-email: info@innermeditation.life
+email: info@inner-meditation.org
 #description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
